<resources>
    <string name="app_name">Tracker</string>
    <string name="actionSettings">Settings</string>
    <string name="chooseImage">Choose an Image</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="datePurchased">Purchased</string>
    <string name="dateExpires">Expires</string>
    <string name="name">Name</string>
    <string name="tags">Tags</string>
    <string name="chooseDate">Choose a date</string>
    <string name="disposed">Disposed</string>
    <string-array name="itemTags">
        <item>Other</item>
        <item>Face</item>
        <item>Eyes</item>
        <item>Cheeks</item>
        <item>Lips</item>
        <item>Brows</item>
        <item>Fragrance</item>
        <item>Body</item>
    </string-array>
</resources>
