<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tarotato.tracker.ViewItemActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:layout_editor_absoluteY="27dp"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="142dp"
        android:layout_column="1"
        android:layout_row="0"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteY="27dp"
        tools:layout_editor_absoluteX="212dp" />

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="239dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="169dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:text="@string/datePurchased" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:text="@string/dateExpires" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:text="@string/tags" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/disposed" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="TextView" />

    </GridLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="44dp" />

</android.support.constraint.ConstraintLayout>
